# FastAPI_LoadFile

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2025_03_28_2209-d492a9b9bb6c_init.py  2025_03_29_2001-5e79913358af_add_refresh_token_and_set_nullable_for_.py  2025_03_30_1030-41e9a8c47e5d_create_table_files.py
src/: main.py
src/auth/: routers.py  schemas.py  utils.py
src/core/: config.py  depends.py  jwt_utils.py
src/files/: models.py  routers.py  schemas.py  utils.py
src/users/: crud.py  models.py  routers.py  schemas.py
src/utils/: create_users.py
static/css/: style.css
templates/: home.html  welcome.html
tests/: pytest.ini  test_file.py  test_user.py
